[metadata]
name = canopen
description = CANopen stack implementation
long_description = file: README.rst
project_urls =
    Documentation = http://canopen.readthedocs.io/en/stable/
    Source Code = https://github.com/christiansandberg/canopen
author = Christian Sandberg
author_email = christiansandberg@me.com
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Developers
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.6
install_requires =
    python-can >= 3.0.0
include_package_data = True

[mypy]
strict = False
disallow-untyped-defs = True
show_error_codes = True
